# tensormidi

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
example/: Makefile  parse.cpp  readme.ipynb  synth.ipynb
src/tensormidi/: __init__.py
src/tensormidi/include/tensormidi/: tensormidi.h
tensormidi_bind/: tensormidi_bind.cpp
